--- a/app/src/main/res/layout/label_layout.xml
+++ b/app/src/main/res/layout/label_layout.xml
@@ -1,11 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120px">
+    android:layout_height="50dp">
+
+    <ImageButton
+        android:id="@+id/label_hide_or_show"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:scaleType="centerInside"
+        android:contentDescription="arrow_hide_or_show"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/one_label_name"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <TextView
         android:id="@+id/one_label_name"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:text="default"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/one_label_add_button"
+        app:layout_constraintStart_toEndOf="@id/label_hide_or_show"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-</LinearLayout>
+    <ImageButton
+        android:id="@+id/one_label_add_button"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:scaleType="centerInside"
+        android:contentDescription="add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/one_label_delete_all"
+        app:layout_constraintStart_toEndOf="@id/one_label_name"
+        app:layout_constraintHorizontal_bias="10"
+        />
+
+    <ImageButton
+        android:id="@+id/one_label_delete_all"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:scaleType="centerInside"
+        android:contentDescription="delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/one_label_add_button"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
