--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/stars">
+    android:background="@drawable/ano_light_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/user_info"
@@ -63,23 +63,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#80ffffff">
+        android:background="#80333333">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/change_user_info"
             android:layout_width="350dp"
-            android:layout_height="480dp"
+            android:layout_height="550dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#dddddd">
+            android:background="#eeeeee">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/change_user_info_head_line"
                 android:layout_width="280dp"
                 android:layout_height="120dp"
-                app:layout_constraintBottom_toTopOf="@id/change_user_info_username_line"
+                app:layout_constraintBottom_toTopOf="@id/change_user_info_sign_line"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -122,13 +122,50 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/change_user_info_sign_line"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                app:layout_constraintBottom_toTopOf="@id/change_user_info_username_line"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/change_user_info_head_line">
+
+                <ImageView
+                    android:id="@+id/change_user_info_sign_image"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/sign"
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/change_user_info_sign_text"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <EditText
+                    android:id="@+id/change_user_info_sign_text"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/change_user_info_sign_image"
+                    android:gravity="center"
+                    android:hint="个性签名"
+                    android:textSize="18sp"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:maxLength="20"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/change_user_info_username_line"
                 android:layout_width="300dp"
                 android:layout_height="60dp"
                 app:layout_constraintBottom_toTopOf="@id/change_user_info_password_line"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/change_user_info_head_line">
+                app:layout_constraintTop_toBottomOf="@id/change_user_info_sign_line">
 
                 <ImageView
                     android:id="@+id/change_user_info_username_image"
