support add image in edit page, add audio and video in edit page. but there may be too many bugs in audio and vidoe, do not use them before fixed!

--- a/app/src/main/res/layout/edit_note_audio.xml
+++ b/app/src/main/res/layout/edit_note_audio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/edit_note_audio_total_box"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -48,12 +49,12 @@
             android:background="@drawable/radio"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/user_info_name"
+            app:layout_constraintEnd_toStartOf="@+id/edit_one_note_audio_length"
             app:layout_constraintStart_toEndOf="@+id/edit_one_note_audio_view"
             tools:ignore="MissingConstraints"/>
 
         <TextView
-            android:id="@+id/user_info_name"
+            android:id="@+id/edit_one_note_audio_length"
             android:layout_width="60dp"
             android:layout_height="30dp"
             app:layout_constraintTop_toTopOf="parent"
