--- a/app/src/main/res/layout/edit_one_note.xml
+++ b/app/src/main/res/layout/edit_one_note.xml
@@ -14,7 +14,8 @@
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/edit_one_note_title">
 
         <ImageButton
             android:id="@+id/edit_title_back"
@@ -78,7 +79,6 @@
         android:id="@+id/edit_one_note_title"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
         android:gravity="center"
         android:hint="标题"
         android:inputType="text"
@@ -88,12 +88,14 @@
         android:background="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_one_note_first_line" />
+        app:layout_constraintTop_toBottomOf="@id/edit_one_note_first_line"
+        app:layout_constraintBottom_toTopOf="@+id/edit_one_note_item_list"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/edit_one_note_item_list"
         android:layout_width="380dp"
-        android:layout_height="550dp"
+        android:layout_height="600dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
