--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/label_list"
+        app:layout_constraintBottom_toTopOf="@id/note_list_setting"
         app:layout_constraintVertical_bias="0.352">
 
         <ImageView
@@ -42,6 +42,66 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/note_list_setting"
+        android:layout_width="400dp"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_info"
+        app:layout_constraintBottom_toTopOf="@id/label_list"
+        >
+
+        <TextView
+            android:id="@+id/add_label"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sort_mode_spinner"
+            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center"
+            android:text="添加标签"
+            android:textSize="16sp"/>
+
+        <Spinner
+            android:id="@+id/sort_mode_spinner"
+            android:layout_width="140dp"
+            android:layout_height="50dp"
+            android:spinnerMode="dropdown"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/search_content"
+            app:layout_constraintStart_toEndOf="@+id/add_label"/>
+
+        <EditText
+            android:id="@+id/search_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/search"
+            app:layout_constraintStart_toEndOf="@+id/sort_mode_spinner"
+            android:gravity="left|center"
+            android:hint="搜索"
+            android:textSize="16sp"
+            android:inputType="text"
+            android:maxLines="1"
+            android:maxLength="20"/>
+
+        <ImageView
+            android:id="@+id/search"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/search"
+            tools:ignore="MissingConstraints"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/search_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/label_list"
         android:layout_width="match_parent"
@@ -50,9 +110,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_info"
+        app:layout_constraintTop_toBottomOf="@id/note_list_setting"
         tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -152,7 +211,7 @@
                     android:gravity="center"
                     android:hint="个性签名"
                     android:textSize="18sp"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:maxLength="20"/>
 
@@ -187,9 +246,9 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/change_user_info_username_image"
                     android:gravity="center"
-                    android:hint="magic cat"
+                    android:hint="username"
                     android:textSize="18sp"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:maxLength="20"/>
 
