--- a/app/src/main/res/layout/edit_note_picture.xml
+++ b/app/src/main/res/layout/edit_note_picture.xml
@@ -27,16 +27,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_one_note_image_view">
 
+        <ImageView
+            android:id="@+id/edit_one_note_image_bigger"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bigger"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/edit_one_note_image_smaller"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/edit_one_note_image_smaller"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/smaller"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/edit_one_note_shoot_image"
+            app:layout_constraintStart_toEndOf="@+id/edit_one_note_image_bigger"
+            />
+
         <Button
             android:id="@+id/edit_one_note_shoot_image"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             app:layout_constraintEnd_toStartOf="@id/edit_one_note_upload_image"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/edit_one_note_image_smaller"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="拍照"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@android:color/white"
             android:background="@drawable/grey_tran"
             android:padding="16dp"
@@ -44,14 +68,14 @@
 
         <Button
             android:id="@+id/edit_one_note_upload_image"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             app:layout_constraintEnd_toStartOf="@id/edit_one_note_delete_image"
             app:layout_constraintStart_toEndOf="@id/edit_one_note_shoot_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="上传"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@android:color/white"
             android:background="@drawable/grey_tran"
             android:padding="16dp"
@@ -59,14 +83,14 @@
 
         <Button
             android:id="@+id/edit_one_note_delete_image"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/edit_one_note_upload_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="删除"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@android:color/white"
             android:background="@drawable/grey_tran"
             android:padding="16dp"
