--- a/app/src/main/res/layout/edit_note_video.xml
+++ b/app/src/main/res/layout/edit_note_video.xml
@@ -25,12 +25,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_one_note_video_view">
 
+        <ImageView
+            android:id="@+id/edit_one_note_video_bigger"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bigger"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/edit_one_note_video_smaller"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/edit_one_note_video_smaller"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/smaller"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/edit_one_note_upload_video"
+            app:layout_constraintStart_toEndOf="@+id/edit_one_note_video_bigger"
+            />
+
         <Button
             android:id="@+id/edit_one_note_upload_video"
             android:layout_width="100dp"
             android:layout_height="80dp"
             app:layout_constraintEnd_toStartOf="@id/edit_one_note_delete_video"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/edit_one_note_video_smaller"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="上传"
