--- a/app/src/main/res/layout/label_layout.xml
+++ b/app/src/main/res/layout/label_layout.xml
@@ -16,12 +16,16 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <TextView
+    <EditText
         android:id="@+id/one_label_name"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:text="default"
+        android:hint="请输入标题..."
+        android:inputType="text"
+        android:textSize="16sp"
+        android:background="@null"
+        android:gravity="start|top"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/one_label_add_button"
         app:layout_constraintStart_toEndOf="@id/label_hide_or_show"
