--- a/app/src/main/res/layout/label_layout.xml
+++ b/app/src/main/res/layout/label_layout.xml
@@ -36,12 +36,12 @@
         android:id="@+id/one_label_searching_aim_aim"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:inputType="text"
         android:textSize="16sp"
         android:background="@null"
         android:gravity="start|top"
         android:visibility="invisible"
         android:singleLine="true"
+        android:maxLines="1"
         android:ellipsize="marquee"
         android:scrollHorizontally="true"
         android:focusable="true"
